[package]
name = "temp_send"
version = "0.1.0"
authors = ["Andrew Hepp <drewhepp@umich.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.2"
embedded-hal = "0.2.3"
log = { version = "0.4.8", features = ["release_max_level_info"] }
nb = "0.1.2"
panic-halt = "0.2.0"
teensy4-bsp = { path = "/home/ahepp/workspace/teensy/teensy4-rs/teensy4-bsp" }
mcp9600 = { path = "/home/ahepp/workspace/mcp9600" }
